--- a/Dockerfile.serve
+++ b/Dockerfile.serve
@@ -1,21 +1,7 @@
-FROM ruby:2.5-alpine as jekyll-base
-
-RUN apk add --no-cache build-base gcc bash cmake
-
-RUN gem install jekyll
-
-EXPOSE 4000
-
-WORKDIR /site
-
-ENTRYPOINT [ "bundle", "exec", "jekyll" ]
-
-CMD [ "--help" ]
-
-##
-##
-## New stage in multi-stage image
-FROM jekyll-base
+# this file exists because Docker Hub can't make images out of build stages
+# so this is a bit redundnat with Dockerfile in this repo
+# but it lets us host two images, mostly the same, on Hub
+FROM bretfisher/jekyll:latest
 
 # create new site by setting -e JEKYLL_NEW=true
 ENV JEKYLL_NEW false
