--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -1,8 +1,8 @@
 # this file exists because Docker Hub can't make images out of build stages
-# so this is a bit redundnat with Dockerfile in this repo
+# so this is a bit redundant with Dockerfile in this repo
 # but it lets us host two images, mostly the same, on Hub
 
-FROM ruby:2.5-alpine
+FROM ruby:2.7-alpine
 
 RUN apk add --no-cache build-base gcc bash cmake
 
