--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -6,7 +6,8 @@ FROM ruby:2.7-alpine
 
 RUN apk add --no-cache build-base gcc bash cmake
 
-RUN gem install jekyll
+# install both bundler 1.x and 2.x
+RUN gem install bundler -v "~>1.0" && gem install bundler jekyll
 
 EXPOSE 4000
 
