remove depreciated warnings

--- a/Dockerfile.serve
+++ b/Dockerfile.serve
@@ -8,7 +8,7 @@ ENV JEKYLL_NEW false
 
 COPY docker-entrypoint.sh /usr/local/bin/
 
-# on every container start we'l'
+# on every container start, check if Gemfile exists and create a new site if it's missing
 ENTRYPOINT [ "docker-entrypoint.sh" ]
 
 CMD [ "bundle", "exec", "jekyll", "serve", "--force_polling", "-H", "0.0.0.0", "-P", "4000" ]
