Add --future flag
Add --future flag to publish posts or collection documents with a future date.

--- a/Dockerfile.serve
+++ b/Dockerfile.serve
@@ -8,4 +8,4 @@ COPY docker-entrypoint.sh /usr/local/bin/
 # on every container start, check if Gemfile exists and warn if it's missing
 ENTRYPOINT [ "docker-entrypoint.sh" ]
 
-CMD [ "bundle", "exec", "jekyll", "serve", "--force_polling", "-H", "0.0.0.0", "-P", "4000" ]
+CMD [ "bundle", "exec", "jekyll", "serve", "--force_polling", "--future" "-H", "0.0.0.0", "-P", "4000" ]
