--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -37,6 +37,7 @@ jobs:
         uses: docker/setup-qemu-action@v1.2.0
       -
         name: Set up Docker Buildx
+        id: buildx
         uses: docker/setup-buildx-action@v1
       -
         # This makes image builds fast!      
