--- a/.github/workflows/call-docker-build.yaml
+++ b/.github/workflows/call-docker-build.yaml
@@ -45,7 +45,7 @@ jobs:
       image-names: |
         bretfisher/jekyll
         ghcr.io/bretfisher/jekyll
-      platforms: linux/amd64,linux/arm64
+      platforms: linux/amd64,linux/arm64,linux/arm/v7
       target: jekyll
 
   build-jekyll-serve-image:
@@ -76,5 +76,5 @@ jobs:
       image-names: |
         bretfisher/jekyll-serve 
         ghcr.io/bretfisher/jekyll-serve
-      platforms: linux/amd64,linux/arm64
+      platforms: linux/amd64,linux/arm64,linux/arm/v7
       target: jekyll-serve
