--- a/.github/workflows/call-docker-build.yaml
+++ b/.github/workflows/call-docker-build.yaml
@@ -58,7 +58,7 @@ jobs:
 
     needs: build-jekyll-image
 
-    if: github.event_name == 'push'
+    # if: github.event_name == 'push'
 
     permissions:
       contents: read
